progresses in the TA grammar